opam-version: "1.2"
maintainer: "stephen.dolan@cl.cam.ac.uk"
authors: ["Stephen Dolan"]
homepage: "https://github.com/stedolan/crowbar"
bug-reports: "https://github.com/stedolan/crowbar/issues"
dev-repo: "https://github.com/stedolan/crowbar.git"
license: "MIT"
build:
[[ "dune" "build" "-p" name "-j" jobs ]]
build-test:
[[ "dune" "build" "-p" name "-j" jobs ]]
available: [ ocaml-version >= "4.02" ]
depends: [
  "dune" {build & >= "1.1"}
  "ocplib-endian"
  "cmdliner"
  "afl-persistent" {>= "1.1"}
  "calendar" {test}
  "xmldiff" {test}
  "fpath" {test}
  "pprint" {test & < "20180528"}
  "uucp" {test}
  "uunf" {test}
  "uutf" {test}
]
